<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    tools:context="com.tictactoe.MainActivity"
    android:padding="16dp"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="4dp"
        android:layout_above="@+id/container2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/player2Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/player2"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grid"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:weightSum="3"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1_wins"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/p1_wins_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/o"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draws"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/draws_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/o"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2_wins"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/p2_wins_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/o"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:columnWidth="54dp"
        android:columnCount="3"
        android:rowCount="3"
        android:orientation="horizontal"
        android:layout_weight="3"
        >

        <Button
            android:id="@+id/b11"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="0_0"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="54sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b12"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="0_1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="54sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b13"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="0_2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="54sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b21"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="1_0"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b22"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="1_1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/b23"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="1_2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/b31"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:tag="2_0"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            />

        <Button
            android:id="@+id/b32"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:tag="2_1"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b33"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:tag="2_2"
            android:background="@color/colorPrimary"
            android:text="@string/empty_space"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="54sp"
            android:textStyle="bold" />
    </GridLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/grid"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/restart" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:text="@string/reset"
        android:textColor="@color/colorAccent" />
</RelativeLayout>